welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: identifier expected but integer literal found.
while (estFaceMur():0){
                    ^Program:5: error: ')' expected but '}' found.
	}
        ^